--- a/palestra-di-algoritmi/book.toml
+++ b/palestra-di-algoritmi/book.toml
@@ -7,6 +7,11 @@ title = "Palestra di Algoritmi"
 
 [output.html]
 mathjax-support = true
+preferred-dark-theme = "ayu"
+
+[output.html.fold]
+enable = true
+level = 0
 
 [build]
 build-dir = "../docs"
