--- a/palestra-di-algoritmi/book.toml
+++ b/palestra-di-algoritmi/book.toml
@@ -7,12 +7,20 @@ title = "Palestra di Algoritmi"
 
 [output.html]
 mathjax-support = true
+default-theme = "rust"
 preferred-dark-theme = "ayu"
+git-repository-url = "https://github.com/pietrocipriani/palestra-di-algoritmi"
 
 [output.html.fold]
 enable = true
 level = 0
 
+[output.html.print]
+enable = false
+
 [build]
 build-dir = "../docs"
 create-missing = false
+
+[preprocessor.inline-highlighting]
+default-language = "cpp"
